--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 
 jdbc.driver =com.mysql.jdbc.Driver
-jdbc.url =jdbc:mysql://localhost:3306/ssh?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+jdbc.url =jdbc:mysql://localhost:3306/Enter_Heart?useUnicode=true&characterEncoding=utf-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 jdbc.username =root
 jdbc.password =123456
 
